Création des armes et des héros

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/weapons">Weapons</a>
+  <a routerLink="/addHero">Add a new hero</a>
+  <a routerLink="/addWeapon">Add a new Weapon</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
