--- a/src/app/weapon-detail/weapon-detail.component.html
+++ b/src/app/weapon-detail/weapon-detail.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="weapon">
-  <h2>{{weapon.name | uppercase}} Details</h2>
-  {{ estValideFormulaire( getPointsDisponibles(weapon.attaque + weapon.esquive + weapon.degats + weapon.pv)) }}
+  <h2>{{weapon.name | uppercase}} / Details of the weapon</h2>
+  {{ estValideFormulaire( getPointsDisponibles(weapon.attaque + weapon.esquive + weapon.degats + weapon.pv),  weapon.attaque, weapon.esquive, weapon.degats, weapon.pv, weapon.name) }}
   <label>
-    Chaque caractéristique doit être entre -5 et 5 points
+    Chaque caractéristique doit être comprise entre -5 et 5 points.
   </label>
   <label>
     L'addition des caractéristiques doit valoir 0
