--- a/src/app/weapons/weapons.component.html
+++ b/src/app/weapons/weapons.component.html
@@ -1,4 +1,4 @@
-<h2>My Heroes</h2>
+<h2>My Weapons</h2>
 <ul class="weapons">
   <li *ngFor="let weapon of weapons">
     <a routerLink="/weaponDetail/{{weapon.id}}">
