--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -34,19 +34,27 @@
   color:#607D8B;
 }
 
+td {
+  width: 15%;
+}
+
+#weapon-sort {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
 /*.heroes .badge {*/
-/*  display: inline-block;*/
-/*  font-size: small;*/
-/*  color: white;*/
-/*  padding: 0.8em 0.7em 0 0.7em;*/
-/*  background-color:#405061;*/
-/*  line-height: 1em;*/
-/*  position: relative;*/
-/*  left: -1px;*/
-/*  top: -4px;*/
-/*  height: 1.8em;*/
-/*  min-width: 16px;*/
-/*  text-align: right;*/
-/*  margin-right: .8em;*/
-/*  border-radius: 4px 0 0 4px;*/
-/*}*/
+/*   display: inline-block;*/
+/*   font-size: small;*/
+/*   color: white;*/
+/*   padding: 0.8em 0.7em 0 0.7em;*/
+/*   background-color:#405061;*/
+/*   line-height: 1em;*/
+/*   position: relative;*/
+/*   left: -1px;*/
+/*   top: -4px;*/
+/*   height: 1.8em;*/
+/*   min-width: 16px;*/
+/*   text-align: right;*/
+/*   margin-right: .8em;*/
+/*   border-radius: 4px 0 0 4px;*/
+/* }*/
