--- a/src/app/weapons/weapons.component.html
+++ b/src/app/weapons/weapons.component.html
@@ -1,8 +1,33 @@
 <h2>My Weapons</h2>
-<ul class="weapons">
-  <li *ngFor="let weapon of weapons">
-    <a routerLink="/weaponDetail/{{weapon.id}}">
-      <span> {{weapon.name}} </span>
-    </a>
-  </li>
-</ul>
+<table class="table">
+  <tr>
+    <th> <button class="btn btn-light" (click)="filtrerParNom()">Nom</button><i [className]="setClassCSS(triCroissantNom)"></i></th>
+    <th> <button class="btn btn-light" (click)="filtrerParCaracteristique('attaque')"> Attaque</button> <i [className]="setClassCSS(triCroissantAttaque)"></i></th>
+    <th> <button class="btn btn-light" (click)="filtrerParCaracteristique('esquive')"> Esquive</button><i [className]="setClassCSS(triCroissantEsquive)"></i> </th>
+    <th> <button class="btn btn-light" (click)="filtrerParCaracteristique('degats')"> Dégâts</button><i [className]="setClassCSS(triCroissantDegats)"></i> </th>
+    <th> <button class="btn btn-light" (click)="filtrerParCaracteristique('pv')"> Points de vie</button> <i [className]="setClassCSS(triCroissantPV)"></i></th>
+    <th> Supprimer l'arme </th>
+  </tr>
+  <tr *ngFor="let weapon of weapons">
+    <td>
+      <a routerLink="/weaponDetail/{{weapon.id}}">
+        <span> {{weapon.name}} </span>
+      </a>
+    </td>
+    <td>
+      <span> {{weapon.attaque}} </span>
+    </td>
+    <td>
+      <span> {{weapon.esquive}} </span>
+    </td>
+    <td>
+      <span> {{weapon.degats}} </span>
+    </td>
+    <td>
+      <span> {{weapon.pv}} </span>
+    </td>
+    <td>
+      <button class="btn btn-danger btn-suppr" (click)="deleteWeapon(weapon)">X</button>
+    </td>
+  </tr>
+</table>
